--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 name: Laravel Louisville
 markdown: redcarpet
 pygments: true
+exclude: [node_modules, package.json, Gruntfile.js, bower.json, bower_components, npm-debug.log]
